// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`buildRoutes > from 0 modules 1`] = `[Error: Routes were not built]`;

exports[`buildRoutes > from 1 module 1`] = `
"{
    path: "/",
    test: {
      keys: [],
      pattern: /^(?=$|\\/)/i,
    },
    modules: [    
    {
        id: "src/_layout.tsx",
        fileName: "_layout.tsx",
        importFn: () => import("/home/src/_layout.tsx"),
    }],
    loaded: false,
    elements: {},
    tree: undefined,
}"
`;

exports[`buildRoutes > from 2 modules 1`] = `
"{
    path: "/",
    test: {
      keys: [],
      pattern: /^(?=$|\\/)/i,
    },
    modules: [    
    {
        id: "src/_layout.tsx",
        fileName: "_layout.tsx",
        importFn: () => import("/home/src/_layout.tsx"),
    }],
    loaded: false,
    elements: {},
    tree: [
    {
        path: "/abc",
        test: {
          keys: [],
          pattern: /^\\/abc(?=$|\\/)/i,
        },
        modules: [    
        {
            id: "src/abc/_layout.tsx",
            fileName: "_layout.tsx",
            importFn: () => import("/home/src/abc/_layout.tsx"),
        }],
        loaded: false,
        elements: {},
        tree: undefined,
    }
  ],
}"
`;

exports[`buildRoutes > from 3 modules 1`] = `
"{
    path: "/",
    test: {
      keys: [],
      pattern: /^(?=$|\\/)/i,
    },
    modules: [    
    {
        id: "src/_layout.tsx",
        fileName: "_layout.tsx",
        importFn: () => import("/home/src/_layout.tsx"),
    }],
    loaded: false,
    elements: {},
    tree: [
    {
        path: "/xyz",
        test: {
          keys: [],
          pattern: /^\\/xyz(?=$|\\/)/i,
        },
        modules: [    
        {
            id: "src/xyz/_layout.tsx",
            fileName: "_layout.tsx",
            importFn: () => import("/home/src/xyz/_layout.tsx"),
        },
        {
            id: "src/xyz/_index.tsx",
            fileName: "_index.tsx",
            importFn: () => import("/home/src/xyz/_layout.tsx"),
        }],
        loaded: false,
        elements: {},
        tree: undefined,
    }
  ],
}"
`;
